Added main menu and states for Matrix and Window

--- a/Crossword/Crossword.vcxproj.filters
+++ b/Crossword/Crossword.vcxproj.filters
@@ -61,4 +61,9 @@
       <Filter>Файлы ресурсов</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="idc_menu.bin">
+      <Filter>Файлы ресурсов</Filter>
+    </None>
+  </ItemGroup>
 </Project>
