--- a/Crossword/Crossword.vcxproj
+++ b/Crossword/Crossword.vcxproj
@@ -172,6 +172,9 @@
     <Image Include="Crossword.ico" />
     <Image Include="small.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="idc_menu.bin" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
